--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -38,7 +38,7 @@ set-option -g status-justify "left"
 set-option -g status-left-style none
 set-option -g status-left-length "80"
 set-option -g status-right-style none
-set-option -g status-right-length "80"
+set-option -g status-right-length 0
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=green,bg=default,bright]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load) #[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
